ajout des captures

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Jeu de Dames</h1>
     <div id="board"></div>
+    <p>Le repository est <a href="https://github.com/Sebastien0506/jeu_de_dames" target="_blank">ici</a></p>
 
     <script type="module" src="dist/index.js"></script>
 </body>
